--- a/abdelhaq_experienceis_app/src/app/components/usuarios/usuarios.component.scss
+++ b/abdelhaq_experienceis_app/src/app/components/usuarios/usuarios.component.scss
@@ -1,3 +1,12 @@
+.cuerpo{
+    background-color: rgb(0, 131, 131);
+}
+
+.principal{
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
 .container, table {
     background-color: rgb(240, 240, 240);
     padding: 20px;
